[package]
name = "reth-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", features = ["net"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", features = ["test-utils"] }

alloy-consensus = { version = "0.11", default-features = false }
alloy-genesis = { version = "*", default-features = false }
alloy-primitives = { version = "*", default-features = false }
secp256k1 = { version = "0.29", default-features = false, features = ["global-context", "recovery"] }
futures = "0.3"
tokio = { version = "1", default-features = false }
eyre = "0.6"
futures-util = "0.3.31"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
